--- a/test/sass/partials/_section-features-list.scss
+++ b/test/sass/partials/_section-features-list.scss
@@ -7,7 +7,7 @@
   }
 
   .feature-item {
-    margin: 100px 0;
+    padding: 100px 0;
 
     @media (min-width: $mobile-size + 1px) {
       display: flex;
